change seguro pages

--- a/gooverseas/admin/admin.html
+++ b/gooverseas/admin/admin.html
@@ -95,6 +95,9 @@
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>为企业员工提供本地服务</a></h3>
 						<p >外派员工签证、本地居留卡办理、员工本地陪同翻译、员工保险等个人业务。</p>
+						<P>特别推荐：</P>
+						<P>-外派高管及家属的高额赔偿意外保险</P>
+						<p class ="para"><a href="../../investment/mapfre/company/salud.html">-高端医疗保险：MAPFRE公司报销保险</a></p>
 					</div>
 				</div>
 			</div>
