--- a/gooverseas/gooverseas/go.html
+++ b/gooverseas/gooverseas/go.html
@@ -79,7 +79,8 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>公司注册</a></h3>
-						<p>提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
+						<p>-提供西班牙本地公司注册流程咨询服务，也可全程代办。</p>
+						<p>-为企业提供西班牙税务、法律高端咨询。</p>
 					</div>
 				</div>
 			</div>
@@ -91,7 +92,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>公司业务代理</a></h3>
-						<p >为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
+						<p>为尚未在西班牙开设分公司的企业代理西班牙业务。</p>
 					</div>
 				</div>
 			</div>
