--- a/gooverseas/marketing/marketing.html
+++ b/gooverseas/marketing/marketing.html
@@ -98,7 +98,8 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>数字营销</a></h3>
-						<p>为企业针对欧洲市场提供数字营销服务。</p>
+						<p>为企业针对欧洲市场提供数字营销服务：</p>
+						<p>公司网站制作、线上宣传、社交媒体发布等。</p>
 					</div>
 				</div>
 			</div>
