--- a/investment/mapfre/company/salud.html
+++ b/investment/mapfre/company/salud.html
@@ -70,14 +70,14 @@
 
 			<div class="col-md-6 col-lg-12 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-40 d-flex align-items-end" style="background-image: url('../salud.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../salud2.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">医疗保险</span>
-							<span class="yr">公司业务</span>
+<!--							<span class="yr">公司业务</span>-->
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h2><a>公司报销保险</a></h2>
+						<h2><a>MAPFRE高端医疗保险——公司报销保险</a></h2>
 						<p>公司报销保险是一种具有最大承保范围的医疗保险计划，让您可以选择世界上任何医生或医院。</p>
 						<p>它允许您不受限制地访问西班牙的医生和医院网络，并包括美国批准的广泛医院网络。 MAPFRE健康保险医疗服务部精心挑选了所有这些专业人员和健康中心，以确保您得到最好的照顾。</p>
 						<h4>MAPFRE 为您和您的家人提供全面承保的健康保险。 其众多优点包括：</h4>
