--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -62,7 +62,6 @@
 </section>
 
 
-
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div  class="row" class = "wrapper">
@@ -70,15 +69,15 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="company/patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">资产保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="company/patrimonio.html">MAPFRE资产保护保险</a></h3>
-						<p>MAPFRE 资产保护解决方案（Soluciones para la protección del patrimonio）。</p>
+						<h3 class="heading"><a>MAPFRE资产保护保险</a></h3>
+						<p>MAPFRE 资产保护解决方案（Soluciones para la protección del patrimonio）包含：</p>
 						<p>-工业和服务保险 Seguro para Industrias y Servicios</p>
 						<p>-商业保险 Seguro para Comercios</p>
 						<p>-农业公司 Empresas Agropecuarias</p>
@@ -96,15 +95,15 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="company/terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">民事责任保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="company/terceros.html" class="heading"><a href="#">针对第三方的责任保护解决方案</a></h3>
-						<p>MAPFRE Soluciones para la protección de la responsabilidad frente a terceros</p>
+						<h3  class="heading"><a href="#">第三方责任保险</a></h3>
+						<p>MAPFRE 第三方责任保险（Soluciones para la protección de la responsabilidad frente a terceros）包括：</p>
 						<p>-公司民事责任 Responsabilidad Civil para Empresas</p>
 						<p>-董事和社会管理者的民事责任 Responsabilidad Civil para Directivos y Administradores Sociales</p>
 						<p>-专业民事责任 Responsabilidad Civil Profesional</p>
@@ -123,19 +122,18 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="company/personal.html" class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">员工保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="company/personal.html" class="heading"><a href="#">MAPFRE公司员工保护解决方案</a></h3>
-						<p>MAPFRE Soluciones para la protección del personal de la empresa</p>
-						<p>-人寿险和意外险 Seguros de Vida-Riesgo y Accidentes</p>
-						<a href="company/salud.html"><p>-医疗保险 Seguro de Salud</p></a>
-						<p>-养老金计划和退休解决方案 Planes de Pensiones y Soluciones para la Jubilación</p>
-						<p>-公司旅行保险 Seguro de Viaje para Empresas</p>
+						<h3 class="heading"><a href="#">企业员工保护解决方案</a></h3>
+						<p>MAPFRE针对企业员工提供以下保险（Soluciones para la protección del personal de la empresa）：</p>
+						<p>-员工医疗保险 Seguro de Salud</p>
+						<p>-员工意外保险 Seguros de Vida, Riesgo y Accidentes</p>
+						<p>-员工养老金和退休计划 Planes de Pensiones y Jubilación</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
 <!--							<p class="mb-0"><a href="company/personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
@@ -151,26 +149,53 @@
 
 
 
+<section class="home-slider owl-carousel">
 
-<section class="ftco-intro" style="background-image: url(mapfre.jpg);" data-stellar-background-ratio="0.5">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 suscribete_form">
-				<h2>MAPFRE业务介绍</h2>
-				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直位于西班牙首位。
-					睿泽国际作为MAPFRE高级合作伙伴，代理MAPFRE公司业务与个人业务，联合MAPFRE为您提供最优质的保险服务。</p>
+	<div class="slider-item" href="company/salud.html" style="background-image:url(salud2.jpg)">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<a href="company/salud.html"><h1 class="mb-4" style = "color: #f7f8f8" >特别推荐：MAPFRE高端医疗保险——公司报销保险</h1></a>
+					<a href="company/salud.html"><h5 style = "color: #f7f8f8" href="company/salud.html">让您可以选择世界上任何医生或医院。它允许您不受限制地访问西班牙的医生和医院网络，并包括美国批准的广泛医院网络。
+						MAPFRE健康保险医疗服务部精心挑选了所有这些专业人员和健康中心，以确保您得到最好的照顾，为您和您的家人提供全面承保的健康保险。</h5></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="slider-item" style="background-image:url(mapfre.jpg)">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<h1 class="mb-4" style = "color: #f7f8f8">MAPFRE保险公司介绍</h1>
+					<h5 style = "color: #f7f8f8">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直位于西班牙首位。
+						睿泽国际作为MAPFRE高级合作伙伴，代理MAPFRE公司业务与个人业务，联合MAPFRE为您提供最优质的保险服务。</h5>
+				</div>
 			</div>
 		</div>
 	</div>
 </section>
+
+<!--<section class="ftco-intro" style="background-image: url(mapfre.jpg);" data-stellar-background-ratio="0.5">-->
+<!--	<div class="overlay"></div>-->
+<!--	<div class="container">-->
+<!--		<div class="row">-->
+<!--			<div class="col-md-12 suscribete_form">-->
+<!--				<h2>MAPFRE业务介绍</h2>-->
+<!--				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直位于西班牙首位。-->
+<!--					睿泽国际作为MAPFRE高级合作伙伴，代理MAPFRE公司业务与个人业务，联合MAPFRE为您提供最优质的保险服务。</p>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
 
 
 
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div class="row" class = "wrapper">
-
 
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="blog-entry">
@@ -182,7 +207,13 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>MAPFRE医疗保险</a></h3>
-						<p>MAPFRE医疗保险根据客户需求有不同的类型的保险，为您提供便捷的服务，包含了西班牙各专科医院医生以及西班牙最好的私立医院。</p>
+						<p>MAPFRE医疗保险根据客户需求提供两种不同的类型的保险：
+						<p>-普通医疗保险
+						<p>提供性价比极佳的世界500强保险机构Mapfre医疗保险。看诊医生都是资深西班牙各科医生及多位国际顶级职业运动员的私人医生。</p>
+<!--						< para 样式 ， 普通段落鼠标移到上面显示链接颜色-->
+						<p class ="para"><a href="company/salud.html">-高端医疗保险</a></p>
+						<p>公司报销保险是一种具有最大承保范围的医疗保险计划，让您可以选择世界上任何医生或医院。
+							全球保险，可以直接看医生不需要预约优先权，个人预付费用，保险公司报销可达到90%的医疗费用。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-salud-global/es/fecha-inicio-seguro?PPPO=MINTER&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -190,6 +221,31 @@
 				</div>
 			</div>
 
+
+			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a  class="block-15 d-flex align-items-end" style="background-image: url('vida.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">人寿保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>MAPFRE人寿保险</a></h3>
+						<p>MAPFRE提供以下两种类型意外伤亡保险：</p>
+						<p>-普通意外伤害保险</p>
+						<p>只对意外伤害投保，没有保金收益</p>
+						<p>-保险+理财意外伤害保险</p>
+						<p>有投资收益型意外伤害保险</p>
+						<p>多种投保方式如定投、大额保单等，投保金额会获得投资收益年化2%-10%.</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-vida/es/fecha-nacimiento?PPPO=MINTER&pid1=20170113-pmp-neg-menuvidapresurap01%2F" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
 			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
@@ -202,19 +258,19 @@
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>MAPFRE汽车保险</a></h3>
 						<p >MAPFRE汽车保险提供不同的选择：</p>
-						<p >第三方责任险(Terceros)</p>
+						<p >-第三方责任险(Terceros)</p>
 <!--						<p >民事责任的强制保护</p>-->
 <!--						<p >出行帮助</p>-->
 <!--						<p >车辆损坏索赔</p>-->
-						<p>第三方责任加强险(Terceros Ampliado)</p>
+						<p>-第三方责任加强险(Terceros Ampliado)</p>
 <!--						<p>享受基本保险的全部福利</p>-->
 <!--						<p>挡风玻璃和窗户全部或部分破损</p>-->
 <!--						<p>车辆火灾</p>-->
-						<p>Todo Riesgo con Franquicia</p>
+						<p>-Todo Riesgo con Franquicia</p>
 <!--						<p>法律辩护和损害赔偿要求</p>-->
 <!--						<p>民事责任，即使是骑自行车的人</p>-->
 <!--						<p>因故意破坏而造成的车辆损坏</p>-->
-						<p>Todo Riesgo sin Franquicia</p>
+						<p>-Todo Riesgo sin Franquicia</p>
 <!--						<p>火灾损害保护</p>-->
 <!--						<p>向驾车者提供援助和法律建议</p>-->
 <!--						<p>固定补偿</p>-->
@@ -228,25 +284,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a  class="block-15 d-flex align-items-end" style="background-image: url('vida.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">个人业务</span>
-							<span class="yr">人寿保险</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a>MAPFRE人寿保险</a></h3>
-						<p >MAPFRE人寿保险是人身保险的一种，以被保险人的寿命为保险标的，且以被保险人的生存或死亡为给付条件的人身保险。 和所有保险业务一样，被保险人将风险转嫁给保险人，接受保险人的条款并支付保险费。 </p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-vida/es/fecha-nacimiento?PPPO=MINTER&pid1=20170113-pmp-neg-menuvidapresurap01%2F" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
+
 			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a class="block-15 d-flex align-items-end" style="background-image: url('hogar.jpg');">
@@ -257,7 +295,10 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="#">MAPFRE房屋保险</a></h3>
-						<p >MAPFRE房屋保险为您提供最安心的家，除了房屋基础设施保险外，根据您的需求可以购买更高端的保险，其中覆盖了报警、财务损失赔偿等。</p>
+						<p>MAPFRE房屋保险为您提供最安心的家，除了房屋基础设施保险外，根据您的需求可以购买更高端的保险，其中覆盖了报警、财务损失赔偿等。MAPFRE房屋保险提供三档保险供您选择：</p>
+						<p>-Tú ELIGES - 定制您的保险，只购买您需要的保险</p>
+						<p>-Familiar - 增加IT 协助与法律辩护服务将保护您</p>
+						<p>-Platino - 必要提供转移资产服务，提供意外损坏赔偿</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-hogar/es/direccion?PPPO=MINTER&flujo=fq&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
