--- a/ittech.html
+++ b/ittech.html
@@ -62,13 +62,23 @@
 	</div>
 </section>
 
-<section class="ftco-section ftco-no-pt ftc-no-pb">
+<section class="ftco-section bg-light">
 	<div class="container ">
 		<div class="row wrapper">
-			<div class="col-md-12 order-md-last wrap-about py-5 wrap-about bg-light">
-				<div class="text px-5 ftco-animate">
-					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/image_2.jpg');"></a></p>
-					<h4>睿泽国际作为中国知名ICT企业的高级合作伙伴，为企业提供一站式IT解决方案，包括企业基础网络设施、智慧办公软件解决方案、安保、智慧办公楼等整体解决方案。</h4>
+			<div class="col-md-12  wrap-about py-5 wrap-about bg-light">
+				<div href="ittech/itsolution.html" class="text px-5 ftco-animate" style="background-image: url('images/image_2.jpg');">
+
+					<a class="block-20 d-flex align-items-center" href="ittech/itsolution.html">
+						<h2 class="mb-4" style = "color: #f5f3f3;align-items: center">睿泽国际作为中国知名ICT企业的高级合作伙伴，为在西企业提供一站式IT解决方案，点击查看更多解决方案。</h2></a>
+
+				</div>
+			</div>
+			<div class="col-md-12  wrap-about py-5 wrap-about bg-light">
+				<div  class="row wrapper align-items-stretch px-5" href="ittech/itsolution.html">
+					<img class = "wrapper" style="width: 100%" src="ittech/solution/01.jpg" href="ittech/itsolution.html">
+				</div>
+				<div  class="row wrapper align-items-stretch px-5">
+					<img class = "wrapper" style="width: 100%" src="ittech/solution/02.jpg" href="ittech/itsolution.html">
 				</div>
 			</div>
 
@@ -76,10 +86,18 @@
 	</div>
 </section>
 
+<!--<section class="ftco-section">-->
+<!--	<div class="container">-->
+<!--		<div class="row" class = "wrapper">-->
+<!--			-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
+
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
-			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+		<div class = " row wrapper">
+			<div class="col-md-6 col-lg-4 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="ittech/cloud/cloud.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/cloud.jpg');">
 						<div class="meta-date text-center p-2">
