--- a/products.html
+++ b/products.html
@@ -79,6 +79,23 @@
 <!--	</div>-->
 <!--</section>-->
 
+
+<section class="ftco-section bg-light">
+	<div class="container ">
+		<div class="row wrapper">
+			<div class="col-md-12  wrap-about  wrap-about bg-light">
+				<div href="ittech/itsolution.html" class="text px-5 ftco-animate" style="background-image: url('images/bg_13.jpg');">
+
+					<a class="block-20 d-flex align-items-center" href="ittech/itsolution.html">
+						<h2 class="mb-4" style = "color: #f5f3f3;align-items: center">睿泽国际依托在欧洲多年积累的本地资源，为企业提供各种资源对接和拓展的咨询与业务代理服务，更多信息请联系洽谈。</h2></a>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
 <section class="ftco-section bg-light">
 	<div class="container">
 
