change news pages

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 							<a href="products.html"><h2>渠道拓展</h2></a>
 							<a href="products/mobile/mobile.html"><h5>智能手机</h5></a>
 							<a href="products/network/network.html"><h5>网络设备</h5></a>
-							<a href="products/security/security.html"><h5>安防设备</h5></a>
+							<a href="products/security/security.html"><h5>安保设备</h5></a>
 							<a href="products/solar/solar.html"><h5>光伏设备</h5></a>
 							<a href="products/battery/battery.html"><h5>储能设备</h5></a>
 						</div>
