--- a/ittech/network/huawei/huaweinetwork.html
+++ b/ittech/network/huawei/huaweinetwork.html
@@ -100,9 +100,9 @@
 
 								<li><a href="https://e.huawei.com/cn/solutions/campus/office-meeting">智能办公会议</a></li>
 
-								<li><a href="https://e.huawei.com/cn/solutions/campus/security">园区轻量化安防</a></li>
+								<li><a href="https://e.huawei.com/cn/solutions/campus/security">园区轻量化安保</a></li>
 
-								<li><a href="https://e.huawei.com/cn/solutions/campus/intelligent-security">园区智慧安防</a></li>
+								<li><a href="https://e.huawei.com/cn/solutions/campus/intelligent-security">园区智慧安保</a></li>
 
 							</ul>
 						</div>
