--- a/ittech/security/dahua/dahua.html
+++ b/ittech/security/dahua/dahua.html
@@ -51,7 +51,7 @@
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
-				<h1 class="mb-2 bread">大华安防技术解决方案</h1>
+				<h1 class="mb-2 bread">大华安保技术解决方案</h1>
 				<p class="breadcrumbs">
 				<p>
 					<a href="../../cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
