--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
 				<p>
 					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
 					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>
-					<a href="products/security/security.html" class="btn btn-info px-4 py-3"> 安防设备</a>
+					<a href="products/security/security.html" class="btn btn-info px-4 py-3"> 安保设备</a>
 					<a href="products/solar/solar.html" class="btn btn-info px-4 py-3"> 光伏设备</a>
 					<a href="products/battery/battery.html" class="btn btn-info px-4 py-3"> 储能设备</a>
 				</p>
@@ -151,8 +151,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="products/security/security.html">安防设备</a></h3>
-						<p>睿泽国际作为海康威视、大华一级代理商，代理安防摄像头、智能控制系统，点击查看产品目录</p>
+						<h3 class="heading"><a href="products/security/security.html">安保设备</a></h3>
+						<p>睿泽国际作为海康威视、大华一级代理商，代理安保摄像头、智能控制系统，点击查看产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="products/security/security.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
