--- a/products/security/security.html
+++ b/products/security/security.html
@@ -51,11 +51,11 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
 				<a href="../../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
-				<h1 class="mb-2 bread">安防设备</h1>
+				<h1 class="mb-2 bread">安保设备</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security.html">安保设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
