--- a/products/mobile/mobile.html
+++ b/products/mobile/mobile.html
@@ -55,7 +55,7 @@
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security.html">安保设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
