--- a/products/products_case.html
+++ b/products/products_case.html
@@ -52,7 +52,7 @@
 				<p>
 					<a href="../products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
 					<a href="../products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>
-					<a href="../products/security/security.html" class="btn btn-info px-4 py-3"> 安防设备</a>
+					<a href="../products/security/security.html" class="btn btn-info px-4 py-3"> 安保设备</a>
 					<a href="../products/solar/solar.html" class="btn btn-info px-4 py-3"> 光伏设备</a>
 					<a href="../products/battery/battery.html" class="btn btn-info px-4 py-3"> 储能设备</a>
 				</p>
