change news css

--- a/ittech.html
+++ b/ittech.html
@@ -62,14 +62,18 @@
 	</div>
 </section>
 
+
+
 <section class="ftco-section bg-light">
 	<div class="container ">
-		<div class="row wrapper">
-			<div class="col-md-12  wrap-about py-5 wrap-about bg-light">
-				<div href="ittech/itsolution.html" class="text px-5 ftco-animate" style="background-image: url('images/image_2.jpg');">
+		<div class="row no-gutters slider-text align-items-center justify-content-center">
+			<div class="col-md-12 suscribete_form text-center">
+				<div href="ittech/itsolution.html" class="py-5 px-3 text text-center align-content-center" style="background-image: url('images/image_2.jpg');">
 
-					<a class="block-20 d-flex align-items-center" href="ittech/itsolution.html">
-						<h2 class="mb-4" style = "color: #f5f3f3;align-items: center">睿泽国际作为中国知名ICT企业的高级合作伙伴，为在西企业提供一站式IT解决方案，点击查看更多解决方案。</h2></a>
+					<h1 class="mb-2 align-self-center align-items-center" href="ittech/itsolution.html" style = "color: #f5f3f3;align-items: center">
+						园区网络 · 计算存储 · 安保物联</h1>
+					<h2 class="mb-2 heading align-self-center align-items-center" >
+						<a href="ittech/itsolution.html" class="heading">一站式IT解决方案，点击查看更多解决方案</a></h2>
 
 				</div>
 			</div>
@@ -86,13 +90,6 @@
 	</div>
 </section>
 
-<!--<section class="ftco-section">-->
-<!--	<div class="container">-->
-<!--		<div class="row" class = "wrapper">-->
-<!--			-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</section>-->
 
 <section class="ftco-section bg-light">
 	<div class="container">
