--- a/products.html
+++ b/products.html
@@ -64,31 +64,12 @@
 
 
 
-
-<!--<section class="ftco-section ftco-no-pt ftc-no-pb">-->
-<!--	<div class="container ">-->
-<!--		<div class="row wrapper">-->
-<!--			<div class="col-md-12 order-md-last wrap-about py-5 wrap-about bg-light">-->
-<!--				<div class="text px-5 ftco-animate">-->
-<!--&lt;!&ndash;					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/image_3.jpg');"></a></p>&ndash;&gt;-->
-<!--					<h4>睿泽国际依托在欧洲多年积累本地资源，为企业提供各种资源对接和拓展的咨询与业务代理服务。</h4>-->
-<!--				</div>-->
-<!--			</div>-->
-
-<!--		</div>-->
-<!--	</div>-->
-<!--</section>-->
-
-
 <section class="ftco-section bg-light">
 	<div class="container ">
-		<div class="row wrapper">
-			<div class="col-md-12  wrap-about  wrap-about bg-light">
-				<div href="ittech/itsolution.html" class="text px-5 ftco-animate" style="background-image: url('images/bg_13.jpg');">
-
-					<a class="block-20 d-flex align-items-center" href="ittech/itsolution.html">
-						<h2 class="mb-4" style = "color: #f5f3f3;align-items: center">睿泽国际依托在欧洲多年积累的本地资源，为企业提供各种资源对接和拓展的咨询与业务代理服务，更多信息请联系洽谈。</h2></a>
-
+		<div class="row no-gutters slider-text align-items-center justify-content-center">
+			<div class="col-md-12 suscribete_form text-center">
+				<div class="py-5 px-3 text-center align-content-center" style="background-image: url('images/bg_13.jpg');">
+						<h1 class="mb-2 align-self-center align-items-center" style = "color: #f5f3f3;alignment: center">渠道拓展 · 资源对接 · 业务代理</h1>
 				</div>
 			</div>
 		</div>
