change img style

--- a/investment/mapfre/company/salud.html
+++ b/investment/mapfre/company/salud.html
@@ -103,9 +103,17 @@
 						<p>-HM Hospitals: Puerta del Sur University Hospital, Sanchinarro University Hospital,
 						Montepríncipe University Hospital.</p>
 						<h4>保险覆盖范围：</h4>
-						<img src="coverage1.jpg" style="position: center">
-						<img src="coverage2.jpg">
-						<img src="coverage3.jpg">
+
+						<div  class="row wrapper align-items-stretch px-5" >
+							<img class = "wrapper" style="width: 100%" src="coverage1.jpg">
+						</div>
+						<div  class="row wrapper align-items-stretch px-5" >
+							<img class = "wrapper" style="width: 100%" src="coverage2.jpg">
+						</div>
+						<div  class="row wrapper align-items-stretch px-5" >
+							<img class = "wrapper" style="width: 100%" src="coverage3.jpg">
+						</div>
+
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="REIMBURSEMENT2023.pdf" class="btn btn-secondary">查看下载产品文档<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
